--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -1,5 +1,4 @@
 <header>
-  <!-- Nav Bar -->
   <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
     <div class="container">
       {% if page.permalink != '/' %}
@@ -21,10 +20,8 @@
           {% endif %}
         </a>
       {% elsif site.enable_navbar_social %}
-        <!-- Social Icons -->
         <div class="navbar-brand social">{% include social.liquid %}</div>
       {% endif %}
-      <!-- Navbar Toggle -->
       <button
         class="navbar-toggler collapsed ml-auto"
         type="button"
@@ -42,21 +39,6 @@
 
       <div class="collapse navbar-collapse text-right" id="navbarNav">
         <ul class="navbar-nav ml-auto flex-nowrap">
-          {% for page in site.pages %}
-            {% if page.permalink == '/' %} {% assign about_title = page.title %} {% endif %}
-          {% endfor %}
-
-          <!-- About -->
-          <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
-            <a class="nav-link" href="{{ '/' | relative_url }}">
-              {{- about_title }}
-              {% if page.permalink == '/' %}
-                <span class="sr-only">(current)</span>
-              {% endif %}
-            </a>
-          </li>
-
-          <!-- Other pages -->
           {% assign sorted_pages = site.pages | sort: 'nav_order' %}
           {% for p in sorted_pages %}
             {% if p.nav and p.autogen == null %}
@@ -100,7 +82,7 @@
               {% else %}
                 {% assign is_active = false %}
                 {% if p.permalink == '/' %}
-                  {% if page.url == '/' or page.layout == 'post' or page.layout == 'blog' %}
+                  {% if page.url == '/index.html' or page.layout == 'post' or page.layout == 'blog' %}
                     {% assign is_active = true %}
                   {% endif %}
                 {% else %}
@@ -110,7 +92,8 @@
                   {% endif %}
                 {% endif %}
                 <li class="nav-item {% if is_active %}active{% endif %}">
-                  <a class="nav-link" href="{{ p.url | relative_url }}">
+                  {% assign page_url = p.url | remove: 'index.html' %}
+                  <a class="nav-link" href="{{ page_url | relative_url }}">
                     {{- p.title }}
                     {% if is_active %}
                       <span class="sr-only">(current)</span>
@@ -121,7 +104,6 @@
             {% endif %}
           {% endfor %}
           {% if site.search_enabled %}
-            <!-- Search -->
             <li class="nav-item">
               <button id="search-toggle" title="Search" onclick="openSearchModal()">
                 <span class="nav-link">ctrl k <i class="ti ti-search"></i></span>
@@ -129,7 +111,6 @@
             </li>
           {% endif %}
           {% if site.enable_darkmode %}
-            <!-- Toogle theme mode -->
             <li class="toggle-container">
               <button id="light-toggle" title="Change theme">
                 <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
@@ -142,7 +123,6 @@
     </div>
   </nav>
   {% if site.enable_progressbar %}
-    <!-- Scrolling Progress Bar -->
     <progress id="progress" value="0">
       <div class="progress-container">
         <span class="progress-bar"></span>
